--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-﻿0.3.1:
+﻿0.3.3:
+  date: 2015-04-03
+  changes:
+   - test de déploiement continue
+0.3.1:
   date: 2015-XX-XX
   changes:
     - améliorations des css
